Refined the gitignore and deleted unneeded files Moved from leer.txt/index.html to .gitkeep files

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
-.idea
-.svn
-cache/mpdf/*
-dokumente/backup/index.html
-dokumente/index.html
-dokumente/logs/index.html
-dokumente/upload/index.html
-images/index.html
-images/thumbs/index.html
-interna/templates_c/index.html
-templates_c/index.html
-templates_c/shariff.json
-interna/templates_c/*
+##### JetBrains
+.idea/
+
+##### SVN
+.svn/
+
+##### Template folders
+templates_c/**/*
+!templates_c/**/.gitkeep
+
+interna/templates_c/**/*.*
+!interna/templates_c/**/.gitkeep
+
+##### Log & Zip files
+*.zip
+*.log
+
+##### Cache folders
+cache/**/*.*
+!cache/**/.gitkeep
+
+##### Setting files
 lib/site_conf.php
-dokumente/logs/*.zip
-lib/classes/third-party/composer/vendor/
-templates_c/
