Reverted 1d40923 and disabled the filesystem view for the whole system (https://httpd.apache.org/docs/2.4/sections.html#filesystem)

--- a/.htaccess
+++ b/.htaccess
@@ -81,6 +81,8 @@ FileETag MTime Size
 </IfModule>
 FileETag None
 
+Options -Indexes
+
 #=================================================================================
 # Dynamisch Komprimierung für die Ausgabe aktivieren.
 # Die komprimierte Übertragung von Inhalten spart nicht nur Bandbreite und Traffic,
